--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,6 @@
-.App {
-  text-align: center;
+@import "core/variables.scss";
+@import "core/reset.scss";
+
+body {
+  font-family: "Noto Sans", sans-serif;
 }
