--- a/src/styles/core/reset.scss
+++ b/src/styles/core/reset.scss
@@ -1,5 +1,12 @@
+.app {
+  box-sizing: border-box;
+}
+
 ul {
   list-style-type: none;
   padding-inline-start: 0px;
   padding-left: 0px;
+}
+button {
+  border: none;
 }
